--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,9 @@
 @import "../sass/4_layouts/footer";
 @import "../sass/3_components/links";
 @import "../sass/3_components/icons";
-@import "../sass/3_components/buttons"
+@import "../sass/3_components/buttons";
+@import "../sass/5_pages/restaurant";
+
 
 
 
