--- a/sass/5_pages/_index.scss
+++ b/sass/5_pages/_index.scss
@@ -13,8 +13,11 @@
     justify-content: center;
     align-items: center;
 
-    animation: loaderDisapear 1s ease both;
-    animation-delay: 2.2s;
+    -webkit-animation: loaderDisapear 1s ease both;
+
+            animation: loaderDisapear 1s ease both;
+    -webkit-animation-delay: 2.2s;
+            animation-delay: 2.2s;
 
     .loader{
         display: flex;
@@ -27,27 +30,44 @@
             border-radius: 50%;
 
             transform: translate3d(0);
-            animation: bounce 0.6s alternate forwards;
-            animation-iteration-count: 3;
+            -webkit-animation: bounce 0.6s alternate forwards;
+                    animation: bounce 0.6s alternate forwards;
+            -webkit-animation-iteration-count: 3;
+                    animation-iteration-count: 3;
 
             &:nth-child(1){
                 background-color: $tertiary-color;
             }
             &:nth-child(2){
-                animation-delay: 0.2s;
+                -webkit-animation-delay: 0.2s;
+                        animation-delay: 0.2s;
                 background-color: $secondary-color;
             }
             &:nth-child(3){
-                animation-delay: 0.4s;
+                -webkit-animation-delay: 0.4s;
+                        animation-delay: 0.4s;
                 background-color: $primary-color;
             }
         }
     }
 }
 
+@-webkit-keyframes bounce {
+    to{
+        transform: translate3d(0, -30px, 0);
+    }
+}
+
 @keyframes bounce {
     to{
         transform: translate3d(0, -30px, 0);
+    }
+}
+
+@-webkit-keyframes loaderDisapear {
+    to{
+        opacity: 0;
+        z-index: -10;
     }
 }
 
@@ -68,12 +88,20 @@
 		@include responsive(laptop) {
 			grid-template-columns: 1fr 1fr;
 			grid-template-rows: 1fr 1fr;
+			
 		}
+		
 	}
+		
 
 	&__box {
 		@include boxes;
 		position: relative;
+		&:hover {
+			transform: scale(1.02);
+			transition-duration: 0.5s;
+			
+	}
 	}
 
 	&__img-section {
@@ -182,4 +210,5 @@
 	flex-direction: column;
 	text-align: center;
 	padding: 30px 20px;
+	background-color: $primary-background-color;
 }
