--- a/sass/3_components/_icons.scss
+++ b/sass/3_components/_icons.scss
@@ -1,8 +1,11 @@
-.heart {
-
-  justify-self: end;
-  align-self: center;
-
+/*nomenclature des coeurs de base, affichée sur page index et restaurants*/
+.hearts {
+	position: absolute;
+	right: 20px;
+	bottom: 35px;
+	height: 25px;
+	font-size: 30px;
+	cursor: pointer;
   :hover {
     opacity: 1;
     font-weight: bold;
@@ -15,41 +18,58 @@
     -webkit-background-clip: text;
     color: transparent;
   }
-  &--empty {
-    cursor: pointer;
-    position: absolute;
-    z-index: 2;
-    font-size: 2rem;
-    opacity: 1;
-    transition: opacity 3s ease-in-out;
+  & :checked ~ .unchecked {
+  	display: none;
   }
-  &--full {
-    font-size: 2rem;
-    background-image: linear-gradient(
-      170deg,
-      $secondary-color 0%,
-      $primary-color 100%
-    );
-    background-clip: text;
-    -webkit-background-clip: text;
-    //pour IE
-    color: transparent;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-
-    &::after {
-      content: "";
-      z-index: -1;
-      position: absolute;
-      bottom: -50%;
-      left: -50%;
-      height: 200%;
-      width: 200%;
-      background: $primary-background-color;
-      border-radius: 35%;
-      transform: translateY(0) rotate(0deg);
-      transition: transform 5.5s ease-out;
-    }
-  }
+  & :checked ~ .checked {
+  	display: inline-block;
+  	color: rgba(255, 255, 255, 0);
+   }
+      
 }
+/* Placement coeur des pages restaurants*/
+#heart {
+	position: initial;
+	margin-top: 20px;
+}
+/* animation coeur pour remplissage*/
+.hearts input[type="checkbox"], .hearts .checked {
+  	display: none;
+  	-webkit-animation: like 2s;
+  	        animation: like 2s;
+  	-webkit-animation-fill-mode: forwards;
+  	        animation-fill-mode: forwards;
+            
+}
+
+@-webkit-keyframes like {
+	0% { 
+      opacity: 0;
+  }
+
+  50% { 
+      background: linear-gradient(to bottom, #9356DC,#FF79DA);
+      -webkit-background-clip: text;
+    }
+	
+	100% { 
+      background: linear-gradient(to bottom, #9356DC,#FF79DA);
+      -webkit-background-clip: text;
+  	}
+  }
+
+@keyframes like {
+	0% { 
+      opacity: 0;
+  }
+
+  50% { 
+      background: linear-gradient(to bottom, #9356DC,#FF79DA);
+      -webkit-background-clip: text;
+    }
+	
+	100% { 
+      background: linear-gradient(to bottom, #9356DC,#FF79DA);
+      -webkit-background-clip: text;
+  	}
+  }
