--- a/sass/5_pages/_index.scss
+++ b/sass/5_pages/_index.scss
@@ -1,3 +1,4 @@
+/*Paramétrage de l'animation lors du chargement de la page d'accueil (accueil uniquement)*/
 .loader_wrapper{
     width: 100%;
     height: 100%;
@@ -78,7 +79,7 @@
     }
 }
 
-
+/* CSS de toute la partie restaurant + rajout récent hover lors du passage de la souris sur les restaurants*/
 
 .restaurants {
 	padding: 30px 20px;
@@ -129,7 +130,7 @@
 		padding: 8px 10px;
 	}
 }
-
+/*Tout le code pour la partie Process/Fonctionnement*/
 .process {
 	padding: 30px 20px;
 	background-color: $secondary-background-color;
@@ -192,7 +193,7 @@
 		transition: color 250ms;
 	}
 }
-
+/*Mise en forme de la partie localisation "Paris, Belleville"*/
 .search {
 	@include flex-center;
 	background-color: $city-background-color;
@@ -204,7 +205,7 @@
 		margin: 5px 0;
 	}
 }
-
+/* Mise en forme de la partie présentation, sous le header*/
 .presentation {
 	@include flex-center;
 	flex-direction: column;
