--- a/public/css/main.css
+++ b/public/css/main.css
@@ -406,6 +406,8 @@ table {
   display: none;
   animation: like 2s;
   animation-fill-mode: forwards;
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 @keyframes like {
