--- a/sass/3_components/_icons.scss
+++ b/sass/3_components/_icons.scss
@@ -39,6 +39,8 @@
   	        animation: like 2s;
   	-webkit-animation-fill-mode: forwards;
   	        animation-fill-mode: forwards;
+            transform: translate3d(0,0,0);
+-webkit-transform: translate3d(0,0,0);
             
 }
 
