test coeur pour Ipad et Ipod

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -407,7 +407,8 @@ table {
   animation: like 2s;
   animation-fill-mode: forwards;
   transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
+  transform: translateY(0) rotate(0deg);
+  transition: transform 5.5s ease-out;
 }
 
 @keyframes like {
