--- a/sass/3_components/_icons.scss
+++ b/sass/3_components/_icons.scss
@@ -40,7 +40,8 @@
   	-webkit-animation-fill-mode: forwards;
   	        animation-fill-mode: forwards;
             transform: translate3d(0,0,0);
--webkit-transform: translate3d(0,0,0);
+transform: translateY(0) rotate(0deg);
+			transition: transform 5.5s ease-out;
             
 }
 
