--- a/sass/3_components/_icons.scss
+++ b/sass/3_components/_icons.scss
@@ -39,9 +39,7 @@
   	        animation: like 2s;
   	-webkit-animation-fill-mode: forwards;
   	        animation-fill-mode: forwards;
-            transform: translate3d(0,0,0);
-transform: translateY(0) rotate(0deg);
-			transition: transform 5.5s ease-out;
+            
             
 }
 
@@ -79,4 +77,12 @@ transform: translateY(0) rotate(0deg);
       background: linear-gradient(to bottom, #9356DC,#FF79DA);
       -webkit-background-clip: text;
   	}
+  }
+
+  @supports (-webkit-touch-callout: none) {
+    /* CSS specific to iOS devices */ 
+  }
+  
+  @supports not (-webkit-touch-callout: none) {
+    /* CSS for other than iOS devices */ 
   }
