--- a/sass/5_pages/_restaurant.scss
+++ b/sass/5_pages/_restaurant.scss
@@ -119,3 +119,11 @@
 		opacity: 1;
 	}
 }
+
+@supports (-webkit-touch-callout: none) {
+	/* CSS specific to iOS devices */ 
+  }
+  
+  @supports not (-webkit-touch-callout: none) {
+	/* CSS for other than iOS devices */ 
+  }
