--- a/sass/5_pages/_restaurant.scss
+++ b/sass/5_pages/_restaurant.scss
@@ -77,6 +77,17 @@
 		border-radius: 0 20px 20px 0;
 		transition: all 400ms ease-in-out;
 		transform: translateX(100%);
+		/* CSS specific to iOS devices */ 
+		@supports (-webkit-touch-callout: none) {
+			background-color: $tertiary-color;
+		color: $secondary-text-color;
+		height: 100%;
+		width: 0;
+		@include flex-center;
+		border-radius: 0 20px 20px 0;
+		transition: all 400ms ease-in-out;
+		transform: translateX(100%);
+		  }
 		// faire apparaitre le V au survol de la carte
 	}
 	&__icon {
@@ -97,7 +108,7 @@
 	}
 }
 
-
+//apparition progressive des plats
 @-webkit-keyframes appearance {
 	0% {
 		transform: translateY(100%);
@@ -120,10 +131,3 @@
 	}
 }
 
-@supports (-webkit-touch-callout: none) {
-	/* CSS specific to iOS devices */ 
-  }
-  
-  @supports not (-webkit-touch-callout: none) {
-	/* CSS for other than iOS devices */ 
-  }
